update npm stuff

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "https://github.com/aotolbert",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "del": "^5.0.0",
+    "del": "^5.1.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mkdirp": "^0.5.1",
@@ -23,6 +23,6 @@
     "util": "^0.12.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.4"
   }
 }
