--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "node server.js"
   },
   "author": "https://github.com/aotolbert",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "del": "^5.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mkdirp": "^0.5.1",
     "mz": "^2.7.0",
     "node-deeplink": "^0.5.0",
+    "nodemailer": "^6.4.2",
     "path": "^0.12.7",
     "requirejs": "^2.3.6",
     "static-module": "^3.0.3",
