--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "https://github.com/aotolbert",
   "license": "ISC",
   "dependencies": {
+    "acorn": "^7.1.1",
     "body-parser": "^1.19.0",
     "del": "^5.1.0",
     "dotenv": "^8.2.0",
