--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "fsevents": "^2.1.2",
+    "minimist": "^1.2.5",
     "mkdirp": "^0.5.1",
     "mz": "^2.7.0",
     "node-deeplink": "^0.5.0",
