--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nerve-museum",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is an online Portfolio for Tom Patterson, Outsider Art Critic and Author",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,15 +17,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "minimist": "^1.2.5",
     "mkdirp": "^0.5.5",
     "mz": "^2.7.0",
     "path": "^0.12.7",
     "requirejs": "^2.3.6",
     "static-module": "^3.0.4",
     "util": "^0.12.3"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.4"
   }
 }
