--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "path": "^0.12.7",
     "requirejs": "^2.3.6",
     "static-module": "^3.0.4",
+    "node": "10.21.0",
     "util": "^0.12.3"
   }
 }
