--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nerve-museum",
   "version": "1.0.0",
-  "description": "This is an online Portfolio for Tom Patterson, Outsider Art Critic and Author",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,18 +11,21 @@
   "author": "https://github.com/aotolbert",
   "license": "ISC",
   "dependencies": {
-    "acorn": "^7.3.1",
+    "acorn": "^7.1.1",
     "body-parser": "^1.19.0",
     "del": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "mkdirp": "^0.5.5",
+    "minimist": "^1.2.5",
+    "mkdirp": "^0.5.1",
     "mz": "^2.7.0",
     "path": "^0.12.7",
     "requirejs": "^2.3.6",
-    "static-module": "^3.0.4",
-    "node": "10.21.0",
-    "util": "^0.12.3"
+    "static-module": "^3.0.3",
+    "util": "^0.12.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
