--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "node server.js",
-    "build": "npm run-script build"
+    "dev": "node server.js"
   },
   "author": "https://github.com/aotolbert",
   "license": "ISC",
@@ -18,9 +17,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "fsevents": "^2.1.2",
     "minimist": "^1.2.5",
     "mkdirp": "^0.5.1",
     "mz": "^2.7.0",
+    "node-deeplink": "^0.5.0",
     "path": "^0.12.7",
     "requirejs": "^2.3.6",
     "static-module": "^3.0.3",
